--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,64 @@ body {
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-size: 13px;
     min-height: 100vh;
+    background-color: var(--light-grayish-blue);
 }
 
 main {
     display: grid;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1.7rem;
+    max-width: 960px;
+}
+
+.card {
+    border-radius: 8px;
+    overflow: hidden;
+    padding: 2rem;
+}
+
+.card-0 {
+    grid-row: 1;
+    grid-column: 1 / 3;
+    background-color: var(--moderate-violet);
+    background-image: url(images/bg-pattern-quotation.svg);
+    background-repeat: no-repeat;
+    background-position: right 5rem top;
+}
+
+.card-1 {
+    grid-row: 1;
+    grid-column: 3;
+    background-color: var(--very-dark-grayish-blue);
+}
+
+.card-2 {
+    grid-row: 2;
+    grid-column: 1;
+    background-color: var(--white);
+}
+
+.card-3 {
+    grid-row: 2;
+    grid-column: 2 / 4;
+    background-color: var(--very-dark-blackish-blue);
+}
+
+.card-4 {
+    grid-row: 1 / -1;
+    grid-column: -2;
+    background-color: var(--white);
+}
+
+img {
+    border-radius: 50%;
+    width: 25px;
 }
