--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,8 @@ main {
 .card {
     border-radius: 8px;
     overflow: hidden;
-    padding: 2rem;
+    padding: 1rem 2rem;
+    box-shadow: 4px 4px 12px 2px rgb(0 0 0 / 0.2);
 }
 
 .card-0 {
@@ -80,7 +81,70 @@ main {
     background-color: var(--white);
 }
 
+.card-0, .card-1, .card-3 {
+    color: var(--white);
+}
+
+.card-2, .card-4 {
+    color: var(--very-dark-grayish-blue);
+}
+
 img {
     border-radius: 50%;
     width: 25px;
+    height: 25px;
+}
+
+.author {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.author-title {
+    font-size: 0.7rem;
+    opacity: 0.5;
+}
+
+.author-review {
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.author-desc {
+    font-size: 0.7rem;
+    line-height: 1rem;
+    opacity: 0.7;
+}
+
+@media screen and (max-width: 960px) {
+    .cards-container {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 1fr;
+        padding: 4rem 2rem;
+    }
+
+    .card {
+        grid-column: 1;
+    }
+
+    .card-0 {
+        grid-row: 1;
+    }
+
+    .card-1 {
+        grid-row: 2;
+    }
+
+    .card-2 {
+        grid-row: 3;
+    }
+
+    .card-3 {
+        grid-row: 4;
+    }
+
+    .card-4 {
+        grid-row: 5;
+    }
 }
